gui nieuwe tabellen toegevoegd + nog bugs